# rt-from-frequency-dynamics

./: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml
data/: README.md  location-variant-sequence-counts.tsv  omicron-countries_data-prep.nb  omicron-countries_location-case-counts.tsv  omicron-countries_location-variant-sequence-counts.tsv  omicron-us_data-prep.nb  omicron-us_location-case-counts.tsv  omicron-us_location-variant-sequence-counts.tsv  sgtf-king-county_data-prep.nb  sgtf-king-county_location-case-counts.tsv  sgtf-king-county_location-variant-sequence-counts.tsv  variant-frequencies-case-counts-data-prep.nb  variants-us_data-prep.clades.tsv  variants-us_data-prep.nb  variants-us_data-prep.py  variants-us_data-prep.states.tsv  variants-us_location-case-counts.tsv  variants-us_location-variant-sequence-counts.tsv
manuscript/: README.md  Rakefile  preprint.sty  rt-from-frequency-dynamics.bib  rt-from-frequency-dynamics.tex
notebooks/: GeneratingFigures.ipynb  GeneratingFiguresPython.ipynb  Generating_Synthetic Data.ipynb  MLR-Supplement-Python.ipynb  MLR-test.ipynb  MLR_supplement.ipynb  RegressionAnalysis.ipynb  Rt-Vaccination-Analysis.Rmd  Running_US_States.ipynb  Testing New Interface.ipynb  Testing-Lineages.ipynb  TestingFixedGrowthModel.ipynb  TestingFreeGrowthModel.ipynb  TestingFreeLineageModel.ipynb  US_State_Analysis.ipynb  US_State_Analysis_Fixed_Python.ipynb  US_State_Analysis_Free_Python.ipynb  clades-june-2025.ipynb  omicron-ba275.ipynb  omicron-countries-split.ipynb  omicron-countries.ipynb  omicron-us-manuscript_GARW.ipynb  (+12 more)
(+288 files in other folders)
