[tool.poetry]
name = "rt-from-frequency-dynamics"
version = "0.1.0"
description = ""
authors = ["marlinfiggins <marlinfiggins@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
DateTime = "^4.3"
pandas = "^1.3.4"
numpy = "^1.21.4"
jax = "^0.2.25"
scipy = "^1.7.3"
patsy = "^0.5.2"
numpyro = "^0.8.0"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
