[tool.poetry]
name = "rt-from-frequency-dynamics"
version = "0.1.0"
description = ""
authors = ["marlinfiggins <marlinfiggins@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
DateTime = "^4.3"
pandas = "^1.3.4"
numpy = "^1.21.4"
jax = "^0.3.10"
jaxlib = "^0.3.10"
scipy = "^1.7.3"
numpyro = "^0.9.2"
matplotlib = "^3.5.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
